<resources>
    <string name="app_name">RedSocialDeServicios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_encabezado">comentario comentar comentariocomentario/n/
        comentario  asjjahcjhakahkcj</string>


    <string name="registrate">registrate</string>
    <string name="nuevo_email">Nuevo Email</string>
    <string name="redsocial_trabajadores">redSocial Trabajadores</string>
    <string name="contrase_a">Contraseña</string>
    <string name="texto_registro">registre un email y contraseña. ó puede ingresar con una cuenta de Facebook o Google</string>
    <string name="contraseña">Contraseña</string>
    <string name="acceder">acceder</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="registrarse">registrarse</string>

    //facebook
    <string name="facebook_app_id">805076137044787</string>

    <string name="fb_login_protocol_scheme">fb805076137044787</string>
    <string name="compartirDatos">Google compartirá los datos visualizados en pantalla.</string>
    <string name="imagen_trabajos">Ahora puedes cargar fotos de tus trabajos, ó cargar una imagen solicitandolo</string>
    <string name="title_activity_muro_general">MuroGeneralActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="me_gusta">me gusta</string>
    <string name="comentar">comentar</string>
    <string name="verificar_email">se enviará un mail a tu casilla de correo para restablecer la contraseña.  asegurate de que el mismo sea válido</string>


</resources>