<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.LoginFragment">

    <TextView
        android:id="@+id/textViewCartel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrate"
        android:textSize="30sp"
        android:gravity="center"
        android:background="@color/purple_700"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineAmbientShadowColor="@color/cardview_dark_background"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/textViewCartel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="nuevo_email"
            app:hintAnimationEnabled= "false"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btAcceder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acceder"
        android:background="@drawable/bordes_boton"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/textPasswordRecovery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textPasswordRecovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="olvidé mi contraseña"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:shadowDx="2"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:outlineAmbientShadowColor="@color/purple_700"
        android:shadowColor="@color/purple_500"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewGoogle"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="50dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/btAcceder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ImagenGoogle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/google_icono"
                app:shapeAppearance="@style/Circular"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/ImagenGoogle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="50dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        app:cardCornerRadius="50dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/cardViewGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ImagenRegistrarse"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_registrar"
                app:shapeAppearance="@style/Circular"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrarse"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintStart_toEndOf="@id/ImagenRegistrarse"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>