<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardMuro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="12dp"
        android:elevation="10dp"
        android:backgroundTint="@color/black"
        app:cardMaxElevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imagenUsuarioMuro"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/pajaro"
                android:scaleType="fitXY"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:shapeAppearanceOverlay="@style/Circular"/>

            <TextView
                android:id="@+id/texto_nombre_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="fulano de tal"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/imagenUsuarioMuro"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"/>
            <TextView
                android:id="@+id/textItemMuro"
                app:layout_constraintHorizontal_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/texto_encabezado"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/imagenUsuarioMuro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.zolad.zoominimageview.ZoomInImageView
                android:id="@+id/imagenItemMuro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/pajaro"
                android:scaleType="fitXY"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/textItemMuro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/textLikeMuro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me_gusta"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/imagenItemMuro"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/textComentarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comentar"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/textLikeMuro"
                app:layout_constraintTop_toBottomOf="@id/imagenItemMuro"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardComentar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/cardMuro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textMeGusta"
                android:textSize="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="me gusta"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/textComentarMura"
                android:textSize="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="comentar"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>